--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     <!-- This wrapper creates the phone-like container for our app -->
     <div class="phone-wrapper">
 
+        <div id="loading-screen" class="screen active">
+        <div class="spinner"></div>
+        <h2>Loading Case Files...</h2>
+        <p>Preparing game for offline use. Please wait, do not close the app.</p>
+    </div>
+
         <!-- Screen 1: Team Registration (Visible by default) -->
         <div id="start-screen" class="screen active">
             <h1>THE RED SHOES</h1>
