--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 
         <!-- Screen 2: Main Game Screen (Initially hidden) -->
         <div id="game-screen" class="screen">
-            <button id="case-files-btn" class="case-files-button">🗂️</button>
+            <button id="case-files-btn" class="case-files-button">
+            <img src="case_files.png" alt="Case Files">
+        </button>
             <header class="game-header">
                 <h2 id="team-name-display">Team Name</h2>
                 <div class="header-info">Case Log</div>
@@ -113,15 +115,14 @@
     </div>
  </div> 
 
- <div class="case-files-nav">
+    <div class="case-files-nav">
         <button id="nav-btn-suspects" class="nav-button active">
-            🗂️ Case Files
+            <img src="case_files.png" alt="Files" class="nav-icon"> Case Files
         </button>
         <button id="nav-btn-accusation" class="nav-button">
-            ⚖️ Accusation
+            <img src="accusation_icon.png" alt="Accuse" class="nav-icon"> Accusation
         </button>
     </div>
-</div>
 
     <div id="qr-scan-screen" class="screen">
             <h2>Scan NPC QR Code</h2>
