--- a/index.html
+++ b/index.html
@@ -124,11 +124,10 @@
         </button>
     </div>
 
-    <div id="qr-scan-screen" class="screen">
-            <h2>Scan NPC QR Code</h2>
-            <div id="qr-reader"></div>
-            <button id="cancel-scan-btn" class="btn btn-secondary">Cancel</button>
-    
+    </div> <div id="qr-scan-screen" class="screen">
+        <h2>Scan NPC QR Code</h2>
+        <div id="qr-reader"></div>
+        <button id="cancel-scan-btn" class="btn btn-secondary">Cancel</button>
     </div>
     
     </div>
