--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
 
          <div id="case-files-panel">
         <header class="case-files-header">
-            <h2>Case files</h2>
+            <div class="header-titles">
+                <h2>Case files</h2>
+                <span id="cf-team-name"></span>
+            </div>
             <button id="close-case-files-btn" class="close-button">&times;</button>
         </header>
 
