--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
          <div id="case-files-panel">
         <header class="case-files-header">
-            <div class="header-titles">
+            <div class="header-text-container">
                 <h2>Case files</h2>
                 <span id="cf-team-name"></span>
             </div>
