--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <h3>Final accusation</h3>
             
             <div class="accusation-group">
-                <h4>Who's responsible for the death of Rapolas?</h4>
+                <h4>Who's responsible for the death of the victim?</h4>
                 <p>Select all that you think are quilty.</p>
                 <div id="suspect-checklist" class="checklist-container">
                     </div>
